[package]
name = "pg_str"
version = "0.3.1"
edition = "2021"
authors = ["Matt<matt@publicmatt.com"]
include = [
  "**/*.rs",
  "Cargo.toml",
  "README.md"
]
readme = "README.md"
repository = "https://gitea.publicmatt.com/public/pg_str"
documentation = "https://docs.rs/pg_str"
homepage = "https://gitea.publicmatt.com/public/pg_str"
license="MIT"
description = """
Adds str functions to Postgresql via an extension."""
keywords = ["postgresql", "string", "cases", "pluralize", "markdown"]
categories = ["text-processing", "database"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
pgrx = "=0.11.2"
Inflector = "0.11.4"
str_slug = "0.1.3"
pulldown-cmark = "0.9.1"
any_ascii = "0.3.0"
rand = "0.8.4"
uuid = "1.2.2"
regex = "1.10.2"

[dev-dependencies]
pgrx-tests = "=0.11.2"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
